--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -9,5 +9,6 @@
   "ConnectionStrings": {
     "SqliteConnection": "Data source=e-commerce-skinet",
     "SqlServerConnection": "Server=(localdb)\\mssqllocaldb;Database=e-commerce-udemy;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "ApiUrl": "https://localhost:44306/"
 }
